# text-prompt-generator

./: .gitignore  PromptChecker.py  PromptGenerator.py  README.md  avro_schema.avsc  check_inference_libs.py  cleanup_env.sh  environment.yml  filter_prompt_dataset_tool.py  install_env.sh  install_runpod_env.sh  launching_config.yml  prompt_generator_online_tool.py  prompt_generator_server.py  prompt_generator_tool.py  prompts_dataset_example.txt  pyproject.toml  requirements.txt  run.config.js  run.py  server.py
.reports/: mypy-junit-report.xml
Generator/: groq_generator.py  prompt_checker.py  prompt_generator.py  utils.py  vllm_generator.py
configs/: generator_config.yml  groq_config.yml  infer_config.yml  launching_config.yml  pipeline_config.yml  server_config.yml  service_config.yml  vllm_config.yml
generator/: config.py  groq_generator.py  prompt_checker.py  prompt_generator.py  utils.py  vllm_generator.py
generator/backend_generators/: base_generator.py  groq_generator.py  vllm_generator.py
generator/generator_backend/: base_generator_backend.py  groq_backend.py  lmdeploy_backend.py  mcl_backend.py  vllm_backend.py
generator/utils/: __init__.py  discord.py  io_utils.py  prompt_checker.py  prompts_filtering_utils.py
installation_scripts/: cleanup_env.sh  environment.yml  install_env.sh  install_runpod_env.sh  requirements.txt
tests/: launching_config.yml  test_groq_generator.py  test_text_filtering.py  test_vllm_generator.py
